--- a/the-lens.html
+++ b/the-lens.html
@@ -2807,12 +2807,12 @@
 
           this.toolsByCategory = {
             clarity: [
-              { name: "Workload Clarity Checklist", type: "Checklist", icon: "bullseye", href: "checklist-capacity.html" },
-              { name: "Priority Reset Plan", type: "Plan", icon: "list-check", href: "the-toolkit.html#priorities" },
-              { name: "Decision Record Template", type: "Template", icon: "file-signature", href: "the-toolkit.html#decision-record" }
+              { name: "Workload Clarity Checklist", type: "Checklist", icon: "bullseye", href: "checklist-workload-clarity.html" },
+              { name: "Priority Reset Plan", type: "Plan", icon: "list-check", href: "plan-priority-reset.html" },
+              { name: "Decision Record Template", type: "Template", icon: "file-signature", href: "template-decision-record.html" }
             ],
             burnout: [
-              { name: "Capacity Assessment Tool", type: "Assessment", icon: "chart-pie", href: "the-toolkit.html#capacity" },
+              { name: "Capacity Checklist", type: "Checklist", icon: "bullseye", href: "checklist-capacity.html" },
               { name: "Burnout Recovery Plan", type: "Plan", icon: "shield-halved", href: "the-toolkit.html#burnout" },
               { name: "Workload Reset Script", type: "Script", icon: "scroll", href: "the-toolkit.html#workload-script" }
             ],
@@ -2822,8 +2822,8 @@
               { name: "Manager Pattern Identifier Checklist", type: "Assessment", icon: "user-shield", href: "the-toolkit.html#manager-patterns" }
             ],
             politics: [
-              { name: "Workplace Politics Map", type: "Framework", icon: "diagram-project", href: "the-toolkit.html#politics" },
-              { name: "Stakeholder Mapping Grid", type: "Template", icon: "users", href: "the-toolkit.html#stakeholders" },
+              { name: "Political Landscape Map", type: "Map", icon: "route", href: "map-political-landscape.html" },
+              { name: "Stakeholder Map", type: "Template", icon: "users", href: "map-stakeholder.html" },
               { name: "Team Tension Heatmap", type: "Assessment", icon: "fire", href: "the-toolkit.html#team-tension" }
             ],
             hr: [
@@ -2832,7 +2832,7 @@
               { name: "Meeting Notes + Follow-Up Script", type: "Script", icon: "pen-to-square", href: "the-toolkit.html#meeting-notes" }
             ],
             confidence: [
-              { name: "Presence Upgrade Checklist", type: "Checklist", icon: "sparkles", href: "the-toolkit.html#presence" },
+              { name: "Presence Upgrade Checklist", type: "Checklist", icon: "sparkles", href: "checklist-presence-upgrade.html" },
               { name: "Difficult Conversation Planner", type: "Template", icon: "comments", href: "the-toolkit.html#difficult-convo" },
               { name: "Credit + Recognition Tracker", type: "Template", icon: "award", href: "the-toolkit.html#credit" }
             ],
@@ -3281,5 +3281,6 @@
   </script>
 </body>
 </html>
+
 
 
