--- a/auth-callback.html
+++ b/auth-callback.html
@@ -229,7 +229,7 @@
 
   <script>
     // ====== CONFIG YOU MAY WANT TO CHANGE ======
-    const DEFAULT_SUCCESS_REDIRECT = "dashboard.html"; // where to send a user after successful auth (if no "next" stored)
+    const DEFAULT_SUCCESS_REDIRECT = "my-playbook.html"; // where to send a user after successful auth (if no "next" stored)
     const DEFAULT_FAIL_REDIRECT = "sign-in.html";      // where to send a user if auth fails
     const SHOW_DEBUG = false;                          // set true if you want users to see callback params (dev only)
 
@@ -435,3 +435,4 @@
   </script>
 </body>
 </html>
+
